<resources>
    <string name="app_name">OldGold</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UserName</string>
    <string name="nav_header_subtitle">email.address@domain.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log out</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="last_name_hint">Last_name</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
</resources>