<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="280dp"
            android:layout_height="41dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/last_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/last_name"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />

        <EditText
            android:id="@+id/password"
            android:layout_width="280dp"
            android:layout_height="41dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/register_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/register_button"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="280dp"
            android:layout_height="41dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="280dp"
            android:layout_height="41dp"
            android:layout_marginTop="96dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/register_header"
            app:layout_constraintStart_toStartOf="@+id/register_header"
            app:layout_constraintTop_toBottomOf="@+id/register_header" />

        <ProgressBar
            android:id="@+id/register_progress_bar"
            android:layout_width="59dp"
            android:layout_height="57dp"
            android:layout_marginTop="48dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>